Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sidebar-layout",
+  "name": "@syumai/react-sidebar-layout",
   "version": "0.1.0",
   "main": "index.js",
   "repository": {
