--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "homepage": "https://github.com/syumai/react-sidebar-layout#readme",
   "dependencies": {
-    "react": "^17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "css-loader": "^6.2.0",
@@ -30,5 +29,8 @@
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.12"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17"
   }
 }
