--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@syumai/react-sidebar-layout",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "index.js",
   "scripts": {
     "build": "webpack"
@@ -15,20 +15,13 @@
     "url": "https://github.com/syumai/react-sidebar-layout/issues"
   },
   "homepage": "https://github.com/syumai/react-sidebar-layout#readme",
-  "dependencies": {
-    "styled-components": "^5.0.0"
-  },
   "devDependencies": {
-    "css-loader": "^6.2.0",
-    "style-loader": "^3.2.1",
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2",
-    "@types/node": "^16.4.13",
-    "@types/react": "^17.0.16",
-    "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.12"
+    "webpack-cli": "^4.7.2"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17"
